--- a/cms-api/package.json
+++ b/cms-api/package.json
@@ -7,9 +7,12 @@
     "prestart": "npm run build",
     "start": "node dist/server.js",
     "predev": "npm run build",
-    "dev": "concurrently \"npx tsc -w\"  \"nodemon dist/server.js\""
+    "dev": "concurrently \"npx tsc -w\"  \"nodemon dist/server.js\"",
+    "prepopulate": "npm run build",
+    "populate": "DEBUG=* node dist/database"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -18,14 +21,17 @@
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "concurrently": "^8.2.2",
