--- a/cms-api/package.json
+++ b/cms-api/package.json
@@ -9,7 +9,9 @@
     "predev": "npm run build",
     "dev": "concurrently \"npx tsc -w\"  \"nodemon dist/server.js\"",
     "prepopulate": "npm run build && DEBUG=* node dist/database/drop",
-    "populate": "DEBUG=* node dist/database/populate"
+    "populate": "DEBUG=* node dist/database/populate",
+    "pretest":"npm run build",
+    "test": "mocha --require dist/test/hooks.js dist/test"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -30,14 +32,18 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
+    "mocha": "^10.2.0",
+    "mongodb-memory-server": "^9.1.3",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
